<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.FullNoteFragment"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/tab"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:id="@+id/button_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:src="@drawable/icon_back_40"
            android:importantForAccessibility="no" />
        <TextView
            android:id="@+id/title_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/create_note"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/edits"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_create"
        app:layout_constraintTop_toBottomOf="@+id/tab">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_edit_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="70dp"
                app:hintTextColor = "@color/black"
                app:boxStrokeColor="@color/black"
                app:cursorColor="@color/black"
                android:hint="@string/title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="18sp"
                    android:textSelectHandle="@drawable/custom_cursor"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <ImageView
                android:id="@+id/button_favorite"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/icon_favorite_unselect_40"
                android:padding="5dp"
                android:visibility="visible"
                android:layout_marginEnd="15dp"
                android:importantForAccessibility="no" />
        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_edit_text_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            app:hintTextColor = "@color/black"
            app:boxStrokeColor="@color/black"
            app:cursorColor="@color/black"
            android:hint="@string/description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:textSize="18sp"
                android:gravity="top"
                android:textSelectHandle="@drawable/custom_cursor"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/button_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back_for_button"
        android:paddingHorizontal="40dp"
        android:paddingVertical="15dp"
        android:text="@string/create"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>